app-code/uptimekuma/uptimekuma-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptimekuma-ingress
  namespace: monitoring
spec:
  entryPoints: [web, websecure]
  routes:
    - match: Host(`kuma.nexus.link`)
      kind: Rule
      middlewares: [{name: authentik-forwardauth, namespace: monitoring}]
      services: [{name: uptimekuma-svc, port: 3001}]
